about to break it :D

--- a/1sexbyschool.html
+++ b/1sexbyschool.html
@@ -100,7 +100,11 @@
 
 
     </div>
-
+    <div class="d-grid gap-2 d-md-flex justify-content-end my-1">
+        <button class="btn mybtn me-md-2" type="button">></button>
+        
+      </div>
+      
 
     <footer-component></footer-component>
 </body>
