--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <script src="components/appUse.js" type="text/javascript" defer></script>
     <script src="components/porn.js" type="text/javascript" defer></script>
     <script src="components/reality.js" type="text/javascript" defer></script>
+    <script src="components/pornwatch.js" type="text/javascript" defer></script>
+    <script src="components/noporn.js" type="text/javascript" defer></script>
+    <script src="components/masterbationPercent.js" type="text/javascript" defer></script>
+    <script src="components/nomasturbate.js" type="text/javascript" defer></script>
+
 
 
 </head>
