--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <script src="components/noporn.js" type="text/javascript" defer></script>
     <script src="components/masterbationPercent.js" type="text/javascript" defer></script>
     <script src="components/nomasturbate.js" type="text/javascript" defer></script>
+    <script src="components/sexFrequency.js" type="text/javascript" defer></script>
+
 
 
 
