--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <script src="components/masterbationPercent.js" type="text/javascript" defer></script>
     <script src="components/nomasturbate.js" type="text/javascript" defer></script>
     <script src="components/sexFrequency.js" type="text/javascript" defer></script>
+    <script src="components/messages2.js" type="text/javascript" defer></script>
+
 
 
 
