--- a/index.html
+++ b/index.html
@@ -21,21 +21,12 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
-    <script src="components/sexBySchool.js" type="text/javascript" defer></script>
-    <script src="components/sexByYear.js" type="text/javascript" defer></script>
-    <script src="components/datingApps.js" type="text/javascript" defer></script>
-    <script src="components/toys.js" type="text/javascript" defer></script>
-    <script src="components/masterbation.js" type="text/javascript" defer></script>
+    <script src="components/components.js" type="text/javascript" defer></script>
     <script src="components/welcome.js" type="text/javascript" defer></script>
-    <script src="components/appUse.js" type="text/javascript" defer></script>
-    <script src="components/porn.js" type="text/javascript" defer></script>
-    <script src="components/reality.js" type="text/javascript" defer></script>
-    <script src="components/pornwatch.js" type="text/javascript" defer></script>
-    <script src="components/noporn.js" type="text/javascript" defer></script>
-    <script src="components/masterbationPercent.js" type="text/javascript" defer></script>
-    <script src="components/nomasturbate.js" type="text/javascript" defer></script>
-    <script src="components/sexFrequency.js" type="text/javascript" defer></script>
-    <script src="components/messages2.js" type="text/javascript" defer></script>
+    <script src="components/goodbye.js" type="text/javascript" defer></script>
+
+
+    
 
 
 
